--- a/css/style.css
+++ b/css/style.css
@@ -528,11 +528,12 @@ hamburger
     z-index: 10; }
   #contact .contact .contact-items {
     width: 100%; }
-    @media (min-width: 768px) {
+    @media (min-width: 1024px) {
       #contact .contact .contact-items {
         width: 100%;
         display: flex;
-        flex-direction: flex;
+        flex-direction: row;
+        justify-content: space-between;
         flex-wrap: nowrap;
         padding: 0 5vw;
         margin: 0 auto; } }
@@ -542,7 +543,7 @@ hamburger
       text-align: center;
       border-radius: 10px;
       padding: .5em;
-      margin: 1em auto;
+      margin: 5vh auto;
       display: flex;
       flex-direction: column;
       justify-content: center;
@@ -552,9 +553,8 @@ hamburger
       transform: preserve-3d;
       border: none;
       outline: none;
-      transform: scale(0.9);
       transition: .8s ease; }
-      @media (min-width: 768px) {
+      @media (min-width: 1024px) {
         #contact .contact .contact-items .contact-item {
           width: 30%; } }
       #contact .contact .contact-items .contact-item::before {
@@ -569,7 +569,7 @@ hamburger
         transform: preserve-3d;
         background: #29323c;
         z-index: -1;
-        box-shadow: inset 3px 3px 4px #ffffff50, inset -3px -3px 4px #ffffff50, 10px 10px 5px rgba(0, 0, 0, 0.4); }
+        box-shadow: inset 3px 3px 4px #ffffff50, inset -3px -3px 4px #ffffff50, 10px 10px 10px rgba(0, 0, 0, 0.3); }
       #contact .contact .contact-items .contact-item::after {
         position: absolute;
         content: '';
@@ -578,13 +578,13 @@ hamburger
         width: 100%;
         height: 100%;
         background-color: #485563;
-        box-shadow: inset 3px 3px 4px #fffa, inset -3px -3px 4px #000a, 5px 15px 10px rgba(0, 0, 0, 0.3);
+        box-shadow: inset 3px 3px 4px #fffa, inset -3px -3px 4px #000a, 10px 15px 5px rgba(0, 0, 0, 0.4);
         border-radius: 10px;
         z-index: -2;
         opacity: 0;
         transition: .5s ease; }
       #contact .contact .contact-items .contact-item:hover {
-        transform: scale(1);
+        transform: scale(0.9);
         transform: preserve-3d; }
         #contact .contact .contact-items .contact-item:hover::before {
           opacity: 0; }
