--- a/scss/_skills.scss
+++ b/scss/_skills.scss
@@ -41,7 +41,14 @@
         }
 
         // end of skills section-title
+        @media (max-width: 768px) {
+            background: $overlay;
+            background-size: 200%;
 
+            &::after {
+                display: none;
+            }
+        }
     }
     // end of skills container
 
@@ -51,11 +58,12 @@
         @media (min-width: 1024px){
             width: 60%;
         }
-        padding: .5em .5em 2em .5em;
+        padding: .5em 1.5em 2em .5em;
         text-align: center;
         margin: 2em auto;
-        background-image: var(--overlay);
-        background: #48556388;
+        // background-image: var(--overlay);
+        // background: #48556388;
+        background: $overlay-blue-dark;
         backdrop-filter: blur(5px);
         border-radius: 10px;
         border: none;
