--- a/css/style.css
+++ b/css/style.css
@@ -256,7 +256,7 @@ hamburger
 
 #skills .skills-top {
   width: 90%;
-  padding: .5em 1.5em 2em .5em;
+  padding: .5em 1em 2em;
   text-align: center;
   margin: 2em auto;
   background: #29323c;
