--- a/scss/_skills.scss
+++ b/scss/_skills.scss
@@ -58,7 +58,7 @@
         @media (min-width: 1024px){
             width: 60%;
         }
-        padding: .5em 1.5em 2em .5em;
+        padding: .5em 1em 2em;
         text-align: center;
         margin: 2em auto;
         // background-image: var(--overlay);
