--- a/scss/_skills.scss
+++ b/scss/_skills.scss
@@ -89,7 +89,7 @@
             font-size: .9em;
             font-weight: 500;
             @media (min-width: 768px){
-                font-size: 1em;
+                font-size: .8em;
             }
             background: transparent;
             overflow: hidden;
