--- a/scss/_contact.scss
+++ b/scss/_contact.scss
@@ -42,7 +42,7 @@
                 width: 85%;
                 /* height: auto; */
                 text-align: center;
-                border-radius: 10px;
+                // border-radius: 10px;
                 padding: .5em;
                 margin: 5vh auto;
                 display: flex;
