--- a/scss/style.scss
+++ b/scss/style.scss
@@ -74,7 +74,7 @@ body {
                     
                     span {
                         color: $span-brand;
-                        // font-size: 1em;
+                        font-size: 1.3em;
                     }
                 }
             }
