--- a/css/style.css
+++ b/css/style.css
@@ -1374,7 +1374,8 @@ body {
             #header .header #navbar .brand h1 {
               font-size: 1.5em; } }
           #header .header #navbar .brand h1 span {
-            color: #f72751; }
+            color: #f72751;
+            font-size: 1.3em; }
       @media (max-width: 1024px) {
         #header .header #navbar .nav-list .links-container {
           position: absolute;
