--- a/css/style.css
+++ b/css/style.css
@@ -792,21 +792,19 @@ hamburger
             flex-basis: 50%;
             box-shadow: inset 5px 0px 5px rgba(150, 149, 149, 0.667), inset 0px -5px 5px #000a; } }
         #projects .projects .all-projects .project-item .project-tile h1 {
-          font-size: 1.5em;
+          font-size: 1em;
+          color: #ddd;
           font-weight: 900;
           line-height: 1em;
           letter-spacing: .05em;
           padding-bottom: 10px;
           text-transform: capitalize;
-          border-bottom: 1px dashed #fffa;
-          background: linear-gradient(0deg, #b9b6b6, #fff);
-          -webkit-background-clip: text;
-          -webkit-text-fill-color: transparent; }
+          border-bottom: 1px dashed #fffa; }
           @media (min-width: 768px) {
             #projects .projects .all-projects .project-item .project-tile h1 {
               font-size: 2em; } }
         #projects .projects .all-projects .project-item .project-tile h2 {
-          font-size: 1em;
+          font-size: .8em;
           line-height: 1.3;
           font-weight: 500;
           margin: .5em 0;
@@ -845,8 +843,8 @@ hamburger
             box-shadow: inset 2px 2px 3px #ddda, inset -2px -2px 5px #000a; }
           #projects .projects .all-projects .project-item .project-tile a i {
             transition: .2s;
-            color: #ddd;
-            font-size: .9em;
+            color: #bfee50;
+            font-size: .7em;
             padding: .2em;
             margin-right: .5em; }
             #projects .projects .all-projects .project-item .project-tile a i::after {
