--- a/scss/_projects.scss
+++ b/scss/_projects.scss
@@ -99,24 +99,25 @@
                                 inset -3px -5px 5px #000a;
                     // project Title (h1)
                     h1 {
-                        font-size: 1.5em;
+                        font-size: 1em;
                         @media (min-width: 768px){
                             font-size: 2em;
                         }
+                        color: #ddd;
                         font-weight: 900;
                         line-height: 1em;
                         letter-spacing: .05em;
                         padding-bottom: 10px;
                         text-transform: capitalize;
                         border-bottom: 1px dashed $text-white-trans;
-                        background: linear-gradient(0deg, #b9b6b6, #fff);
-                        -webkit-background-clip: text;
-                        -webkit-text-fill-color: transparent;
+                        // background: linear-gradient(0deg, #b9b6b6, #fff);
+                        // -webkit-background-clip: text;
+                        // -webkit-text-fill-color: transparent;
                     }
                     // end of project Title (h1)
                     // project details (h2 and p)
                     h2 {
-                        font-size: 1em;
+                        font-size: .8em;
                         line-height: 1.3;
                         font-weight: 500;
                         margin: .5em 0;
@@ -165,8 +166,8 @@
                         // links icon
                         i {
                             transition: .2s;
-                            color: $text-light-d;
-                            font-size: .9em;
+                            color: $text-lime;
+                            font-size: .7em;
                             padding: .2em;
                             margin-right: .5em;
                             // icon label (pseudo)
