--- a/scss/_projects.scss
+++ b/scss/_projects.scss
@@ -99,8 +99,9 @@
                                 inset -3px -5px 5px #000a;
                     // project Title (h1)
                     h1 {
-                        font-size: 1em;
-                        @media (min-width: 768px){
+                        font-size: 1.15em;
+                        width: 100%;
+                        @media (min-width:1024px){
                             font-size: 2em;
                         }
                         color: #ddd;
@@ -117,7 +118,7 @@
                     // end of project Title (h1)
                     // project details (h2 and p)
                     h2 {
-                        font-size: .8em;
+                        font-size: .9em;
                         line-height: 1.3;
                         font-weight: 500;
                         margin: .5em 0;
@@ -167,7 +168,7 @@
                         i {
                             transition: .2s;
                             color: $text-lime;
-                            font-size: .7em;
+                            font-size: .8em;
                             padding: .2em;
                             margin-right: .5em;
                             // icon label (pseudo)
@@ -178,7 +179,7 @@
                                 color: $text-lime;
                                 transition: .3s;
                                 opacity: 0;
-                                margin-left: .5em;
+                                margin-left: 1em;
                                 transition: .3s ease;
                             }
 
@@ -227,7 +228,7 @@
                             inset 5px 5px 5px #ddda,
                             inset -5px 0px 5px #000a;
                         background-image: linear-gradient(60deg, #29323c, 0%, #585563 100%);
-                        opacity: 0;
+                        opacity: .4;
                         transition: .5s;
                         z-index: 3;
                     }
