--- a/css/style.css
+++ b/css/style.css
@@ -1334,9 +1334,30 @@ body {
           background-color: #1b2127;
           transition: .5s ease; }
           #header .header #navbar .nav-list .links-container ul {
-            margin: 25vh 5vw; } }
+            margin: 25vh 5vw; }
+            #header .header #navbar .nav-list .links-container ul li {
+              transform: translateX(10%);
+              opacity: .1; } }
       #header .header #navbar .nav-list .links-container.active {
         left: 0; }
+        #header .header #navbar .nav-list .links-container.active ul li {
+          transition: .5s .5s;
+          transform: translateX(0);
+          opacity: 1; }
+          #header .header #navbar .nav-list .links-container.active ul li:nth-child(1) {
+            transition-delay: .2s; }
+          #header .header #navbar .nav-list .links-container.active ul li:nth-child(2) {
+            transition-delay: .3s; }
+          #header .header #navbar .nav-list .links-container.active ul li:nth-child(3) {
+            transition-delay: .4s; }
+          #header .header #navbar .nav-list .links-container.active ul li:nth-child(4) {
+            transition-delay: .5s; }
+          #header .header #navbar .nav-list .links-container.active ul li:nth-child(5) {
+            transition-delay: .6s; }
+          #header .header #navbar .nav-list .links-container.active ul li:nth-child(6) {
+            transition-delay: .7s; }
+          #header .header #navbar .nav-list .links-container.active ul li a {
+            letter-spacing: normal; }
       @media (min-width: 1025px) {
         #header .header #navbar .nav-list .links-container .nav-avi {
           display: none; } }
