--- a/scss/style.scss
+++ b/scss/style.scss
@@ -96,7 +96,8 @@ body {
                             // list items active transition
                             li {
                                 transform: translateX(10%);
-                                opacity: .1;
+                                opacity: 0;
+                                transition:.3s;
                             }
                         }
                     }
@@ -104,32 +105,29 @@ body {
                         left: 0;
 
                         ul li {
-                            transition: .5s .5s;
+                            transition: .5s;
                             transform: translateX(0);
                             opacity: 1;
 
                             &:nth-child(1){
-                                transition-delay: .2s;
-                            }
-                            &:nth-child(2){
                                 transition-delay: .3s;
                             }
-                            &:nth-child(3){
+                            &:nth-child(2){
                                 transition-delay: .4s;
                             }
-                            &:nth-child(4){
+                            &:nth-child(3){
                                 transition-delay: .5s;
                             }
-                            &:nth-child(5){
+                            &:nth-child(4){
                                 transition-delay: .6s;
                             }
-                            &:nth-child(6){
+                            &:nth-child(5){
                                 transition-delay: .7s;
                             }
-                            
-                            a {
-                                letter-spacing: normal;
+                            &:nth-child(6){
+                                transition-delay: .8s;
                             }
+                            
                         }
                     }
                     // hide nav avi on desktop
