--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -3,12 +3,56 @@
     background-image: $overlay;
     background-color: $background-dark;
     .footer {
-        height: 100vh;
+        min-height: 100vh;
+        width: 100%;
         display: flex;
         flex-direction: column;
-        justify-content: space-evenly;
-        padding-top: 30px;
+        justify-content: space-between;
+        padding-top: 15vh;
         padding-bottom: 10px;
+
+        // form
+        form {
+            @media (min-width: 1024px) {
+                width: 50%;
+            }
+            background-color: $overlay-blue-dark;
+            width: 90%;
+            height: auto;
+            display: flex;
+            flex-direction: column;
+            margin: 5vh auto;
+            padding: 5vh 1em;
+
+            h1 {
+                color: #eee;
+                text-align: center;
+            }
+            .input-div {
+                position: relative;
+                // border: 1px solid yellow;
+                padding: 1em 0 .5em;
+                margin-bottom: 5vh;
+                label {
+                    position: absolute;
+                    top: 0%;
+                    color: #fff;
+                }
+
+                input {
+                    padding: .5em;
+                    width: 100%;
+                    margin: .5em 0;
+                }
+
+                textarea {
+                    padding: .5em;
+                    margin: .5em 0;
+                    width: 100%;
+                }
+            }
+        }
+        // end of form
         // footer thank you message
         .brand {
             width: 80%;
