input background on focus

--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -58,7 +58,8 @@
                         color: $text-valid;
                     }
                     &:focus {
-                        outline: 2px dashed #fffa;
+                        outline: 3px dashed #fffa;
+                        background: #f4f4f4;
                     }
                 }
 
