--- a/css/style.css
+++ b/css/style.css
@@ -1016,7 +1016,8 @@ hamburger
             background-color: #cdf7d3c7;
             color: #000; }
           #footer .footer form .input-div input:focus {
-            outline: 2px dashed #fffa; }
+            outline: 3px dashed #fffa;
+            background: #f4f4f4; }
         #footer .footer form .input-div textarea {
           padding: .5em;
           margin: .5em 0;
