--- a/css/style.css
+++ b/css/style.css
@@ -1016,8 +1016,7 @@ hamburger
             background-color: #cdf7d3c7;
             color: #000; }
           #footer .footer form .input-div input:focus {
-            outline: 3px dashed #fffa;
-            background: #f4f4f4; }
+            outline: 3px dashed #fffa; }
         #footer .footer form .input-div textarea {
           padding: .5em;
           margin: .5em 0;
@@ -1029,7 +1028,7 @@ hamburger
             outline: 3px dashed #fffa; }
       #footer .footer form button {
         position: relative;
-        background-color: #dc143c;
+        background: linear-gradient(0deg, #581212, #dc134c);
         padding: 1em;
         color: #eee;
         font-weight: 600;
@@ -1037,13 +1036,23 @@ hamburger
         text-transform: uppercase;
         border: none;
         outline: none;
-        border-radius: 20px;
+        border-radius: 10px;
         opacity: .9;
         transition: .2s ease;
-        cursor: pointer; }
+        cursor: pointer;
+        isolation: isolate; }
         #footer .footer form button:hover {
           transform: scale(0.98);
           letter-spacing: 0; }
+        #footer .footer form button::before {
+          content: '';
+          position: absolute;
+          top: 0;
+          left: 0;
+          width: 100%;
+          height: 100%;
+          border-radius: 10px;
+          box-shadow: inset 2px 2px 3px #ddda, inset -2px -2px 3px #000a; }
     #footer .footer .brand {
       width: 80%;
       padding: .3em .5em;
