--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -59,7 +59,6 @@
                     }
                     &:focus {
                         outline: 3px dashed #fffa;
-                        background: #f4f4f4;
                     }
                 }
 
@@ -79,7 +78,7 @@
 
             button {
                 position: relative;
-                background-color: $span-crimson;
+                background: linear-gradient(0deg, #581212, #dc134c);
                 padding: 1em ;
                 color: #eee;
                 font-weight: 600;
@@ -87,15 +86,29 @@
                 text-transform: uppercase;
                 border: none;
                 outline: none;
-                border-radius: 20px;
+                border-radius: 10px;
                 opacity: .9;
                 transition: .2s ease;
                 cursor: pointer;
+                isolation: isolate;
                 
                 &:hover {
                     transform: scale(.98);
                     letter-spacing: 0;
                 }
+                // form button box shadow
+                &::before {
+                    content: '';
+                    position: absolute;
+                    top: 0;
+                    left: 0;
+                    width: 100%;
+                    height: 100%;
+                    border-radius: 10px;
+
+                    box-shadow: $box-light-top-sm;
+                }
+                // end of form button box shadow
             }
         }
         // end of form
