--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -29,6 +29,7 @@ $link-crimson: #dc143c;
 $link-crimson-dark:#b60f30;
 // background colors
 $background-light: #fff;
+$background-gray: #f4f4f4;
 $background-dark: #333;
 $background-light: #fff;
 
