--- a/css/style.css
+++ b/css/style.css
@@ -522,7 +522,7 @@ hamburger
   width: 100%;
   margin: 0 auto;
   padding-bottom: 30px;
-  background: #fff;
+  background: #f4f4f4;
   position: relative;
   transform-style: preserve-3d; }
   #contact .contact .contact-header {
@@ -561,19 +561,6 @@ hamburger
       @media (min-width: 1024px) {
         #contact .contact .contact-items .contact-item {
           width: 30%; } }
-      #contact .contact .contact-items .contact-item::before {
-        position: absolute;
-        content: '';
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        border-radius: 10px;
-        transition: 1s ease;
-        transform: preserve-3d;
-        background: #29323c;
-        z-index: -1;
-        box-shadow: inset 3px 3px 4px #ffffff50, inset -3px -3px 4px #ffffff50, 10px 10px 10px rgba(0, 0, 0, 0.3); }
       #contact .contact .contact-items .contact-item::after {
         position: absolute;
         content: '';
@@ -582,17 +569,13 @@ hamburger
         width: 100%;
         height: 100%;
         background-color: #485563;
-        box-shadow: inset 3px 3px 4px #fffa, inset -3px -3px 4px #000a, 5px 5px 5px rgba(0, 0, 0, 0.4);
+        box-shadow: inset 3px 3px 4px #fffa, inset -3px -3px 4px #000a, 5px 5px 3px rgba(0, 0, 0, 0.4);
         border-radius: 10px;
         z-index: -2;
-        opacity: 0;
+        opacity: 1;
         transition: .5s ease; }
       #contact .contact .contact-items .contact-item:hover {
         transform: preserve-3d; }
-        #contact .contact .contact-items .contact-item:hover::before {
-          opacity: 0; }
-        #contact .contact .contact-items .contact-item:hover::after {
-          opacity: 1; }
       #contact .contact .contact-items .contact-item h1 {
         background-image: linear-gradient(50deg, skyblue, #dc1489, skyblue, #dc1489, skyblue);
         background-size: 300%;
@@ -1786,6 +1769,10 @@ body {
       .about .col-right .section-title::after {
         width: 80%;
         margin: 0 auto; }
+    @media (min-width: 768px) {
+      .about .col-right {
+        width: 100%;
+        margin: 0; } }
     .about .col-right:after {
       position: absolute;
       content: '';
@@ -1916,9 +1903,9 @@ body {
     margin-top: 0;
     z-index: 20;
     transform-style: preserve-3d; }
-    @media (min-width: 768px) {
+    @media (min-width: 1024px) {
       .about .col-left {
-        width: 600px;
+        width: 100%;
         height: 500px; } }
     .about .col-left .about-img {
       height: 100%;
@@ -1932,9 +1919,11 @@ body {
       transform: preserve-3d;
       cursor: pointer;
       overflow: hidden; }
-      @media (min-width: 768px) {
+      @media (min-width: 1024px) {
         .about .col-left .about-img {
-          margin-top: 0; } }
+          margin-top: 0;
+          height: 100%;
+          width: 80%; } }
       .about .col-left .about-img::before, .about .col-left .about-img::after {
         font-size: 1em;
         position: absolute;
