--- a/scss/_contact.scss
+++ b/scss/_contact.scss
@@ -6,8 +6,8 @@
         width: 100%;
         margin: 0 auto;
         padding-bottom: 30px;
-        // background: $overlay-blue-dark;
-        background: $background-light;
+        // background: $background-light;
+        background: $background-gray;
         position: relative;
         transform-style: preserve-3d;
         // section-title
@@ -57,24 +57,6 @@
                 // transform: scale(.9);
                 transition: .8s ease;
                 // item box shadows
-                &::before {
-                    position: absolute;
-                    content: '';
-                    top: 0;
-                    left: 0;
-                    width: 100%;
-                    height: 100%;
-                    border-radius: 10px;
-                    transition: 1s ease;
-                    transform: preserve-3d;
-                    // background: $overlay-blue-dark;
-                    background: $overlay-blue-dark;
-                    z-index: -1;
-                    // box-shadow: $box-dark-top-sm;
-                    box-shadow: inset 3px 3px 4px #ffffff50,
-                                inset -3px -3px 4px #ffffff50,
-                                10px 10px 10px rgba(0, 0, 0, 0.300);
-                }
                 &::after {
                     position: absolute;
                     content: '';
@@ -85,10 +67,10 @@
                     background-color: $overlay-blue-light;
                     box-shadow: inset 3px 3px 4px #fffa,
                                 inset -3px -3px 4px #000a,
-                                        5px 5px 5px rgba(0, 0, 0, 0.400);
+                                        5px 5px 3px rgba(0, 0, 0, 0.400);
                     border-radius: 10px;
                     z-index: -2;
-                    opacity: 0;
+                    opacity: 1;
                     transition: .5s ease;
                 }
                 &:hover {
@@ -96,13 +78,13 @@
                     transform: preserve-3d;
 
                     // box shadows hover state
-                    &::before {
-                        opacity: 0;
-                    }
+                    // &::before {
+                    //     opacity: 0;
+                    // }
 
-                    &::after {
-                        opacity: 1;
-                    }
+                    // &::after {
+                    //     opacity: 1;
+                    // }
 
                     // end of box shadows hover state
                 }
